--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -3,7 +3,7 @@
     display: block;
     position: absolute;
     background-color: #f9f9f9;
-    max-width: 180px;
+    width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     right: 1.2%;
     top: 12%;
@@ -15,7 +15,7 @@
     padding: 6px 9px;
     text-decoration: none;
     display: block;
-    border-bottom: 1px solid black;
+    border-bottom: 0.5px solid black;
 }
 
 .dropdown-content a:hover {
