--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -10,14 +10,15 @@
 }
 
 .movies {
+    position: absolute;
+    left: 9.3%;
     display: grid;
     /* grid-template-columns: repeat(3, 300px); */
     grid-template-columns: repeat(var(--repeat, auto-fit),
             minmax(calc(300px * 1), 1fr));
     justify-content: center;
     align-content: center;
-    margin: 0 auto;
-    max-width: 80%;
+    max-width: 65%;
     margin-bottom: 20px;
     height: auto;
 }
@@ -28,4 +29,10 @@
     padding: 20px;
     border-radius: 5px;
     height: 100%;
+}
+.homeSearch {
+    position: absolute;
+    right: 2.6%;
+    top: 4.5%;
+    width: 20%;
 }
