--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,16 +1,14 @@
 
 .dropdown-content {
+    position: fixed;
     display: block;
-    position: absolute;
     background-color: #f9f9f9;
-    width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    right: 1.2%;
-    top: 12%;
-    z-index: 1;
+    z-index:99;
+    width:25%;
 }
 
-.dropdown-content a {
+.searchMovie {
     color: black;
     padding: 6px 9px;
     text-decoration: none;
@@ -18,6 +16,10 @@
     border-bottom: 0.5px solid black;
 }
 
-.dropdown-content a:hover {
-    background-color: #f1f1f1
+.searchMovie:hover {
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+.search{
+    position: relative;
 }
