--- a/client/src/components/pages/account/Account.css
+++ b/client/src/components/pages/account/Account.css
@@ -1,5 +1,6 @@
 .userInfo{
     margin-top: 4%;
+    margin-bottom: 4%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -28,4 +29,8 @@ h3{
 }
 .movieMain{
     float: left;
+}
+.tab{
+    width: 43%;
+    margin: 0 auto;
 }
