--- a/client/src/components/badgecard/BadgeCard.css
+++ b/client/src/components/badgecard/BadgeCard.css
@@ -25,3 +25,10 @@ h1{
     margin-top: 0;
     max-width: 400px;
 }
+.titleLink{
+    text-decoration: none;
+    color: #338BA8
+}
+.cardBody{
+    margin-top: 5%;
+}
