--- a/client/src/components/search/Search.css
+++ b/client/src/components/search/Search.css
@@ -6,16 +6,19 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index:99;
     width: 100%;
+    
 }
-
 .searchMovie {
     color: black;
-    padding: 6px 9px;
+    padding: 7px 9px;
     text-decoration: none;
     display: block;
-    border-bottom: 0.5px solid black;
+    transition: all .2s ease-in-out;
 }
 
+.searchMovie:hover {
+    transform: scale(1.1);
+}
 .searchMovie:hover {
     background-color: #f1f1f1;
     cursor: pointer;
