--- a/client/src/components/movielist/MovieList.css
+++ b/client/src/components/movielist/MovieList.css
@@ -10,3 +10,11 @@
     align-items: center;
     display: flex;
 }
+
+td a{
+    color: black;
+    text-decoration: none;
+}
+td a:hover {
+    color: rgb(39, 72, 182);
+}
