Added user average ratings and loading animation to homepage.

--- a/client/src/components/movielist/MovieList.css
+++ b/client/src/components/movielist/MovieList.css
@@ -23,3 +23,8 @@ td a:hover {
     margin-top: 2%;
     left: 45%;
 }
+.reviewIcon{
+    float: left;
+    padding-top: 5%;
+    padding-right: 3%;
+}
