--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,24 @@
 .custom-shape-divider-top-1649083949 .shape-fill {
   fill: #2D92E0;
 }
+.loader {
+  border: 20px solid #f3f3f3;
+  /* Light grey */
+  border-top: 20px solid rgb(14, 105, 209);
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
