--- a/client/src/components/editAccount/EditAccount.css
+++ b/client/src/components/editAccount/EditAccount.css
@@ -6,3 +6,10 @@
 #nameField{
     margin-top: 2% !important;
 }
+@media only screen and (max-width: 768px) {
+.editAccount {
+        position: relative;
+        right: 0%;
+        width: 100%;
+    }
+}
