--- a/client/src/components/movieListForm/MovieListForm.css
+++ b/client/src/components/movieListForm/MovieListForm.css
@@ -1,14 +1,14 @@
-.singleMovie{
+.addMovieForm {
+    width: 25%;
     margin: 0 auto;
-    max-width: 55%;
     margin-top: 2%;
+    position: relative;
 }
 @media only screen and (max-width: 768px) {
-
-    /* For mobile phones: */
-    .singleMovie {
+    .addMovieForm {
+        width: 90%;
         margin: 0 auto;
-        max-width: 95%;
         margin-top: 2%;
+        position: relative;
     }
 }
