--- a/client/src/components/pages/account/Account.css
+++ b/client/src/components/pages/account/Account.css
@@ -34,3 +34,10 @@ h3{
     width: 43%;
     margin: 0 auto;
 }
+@media only screen and (max-width: 768px) {
+
+    .tab {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
