--- a/client/src/components/navbar/NavbarMin.css
+++ b/client/src/components/navbar/NavbarMin.css
@@ -1,7 +1,7 @@
 .navbar{
     height:80%;
     width:75px;
-    
+    min-height: 280px;
     position: fixed;
     top: 50%;
     -ms-transform: translateY(-50%);
