Auth page error handling

--- a/client/src/components/search/Search.css
+++ b/client/src/components/search/Search.css
@@ -29,5 +29,5 @@
 }
 .search fieldset, label{
     color: black !important;
-    border-color: black !important;
+    border-color: #0000B9!important;
 }
