--- a/client/src/components/navbar/NavbarMin.css
+++ b/client/src/components/navbar/NavbarMin.css
@@ -17,9 +17,9 @@ nav {
     text-align: center;
     /* Pay special attention here! */
     position: fixed;
-        top: 0;
-        z-index: 100;
-    
+    top: 0;
+    z-index: 100;
+    padding-left: 1.5%;
 }
 
 nav a {
