--- a/client/src/components/badgecard/BadgeCard.css
+++ b/client/src/components/badgecard/BadgeCard.css
@@ -15,7 +15,7 @@
 .extra{
     text-align: left;
 }
-h1{
+.bigCard h1{
     width: 100%;
     margin-left: 20px;
 }
@@ -49,7 +49,7 @@ h1{
     .mainContent h2 {
         margin-top: 10px;
     }
-    h1{
+    .bigCard h1{
         text-align: center;
         margin: 0px;
     }
