--- a/client/src/components/pages/movie/Review/Review.css
+++ b/client/src/components/pages/movie/Review/Review.css
@@ -1,12 +1,16 @@
 .movieReviews {
-    position: absolute;
-    right: 25%;
-    width: 50%;
+    position: relative;
+    margin-top: 2%;
+
 }
 .userRating{
     position: absolute;
     right: 0;
     margin-right: 2%;
+}
+.reviewCounter{
+    display: block;
+    float: right;
 }
 @media only screen and (max-width: 768px) {
 
