--- a/client/src/components/pages/movie/Review/Review.css
+++ b/client/src/components/pages/movie/Review/Review.css
@@ -8,6 +8,10 @@
     right: 0;
     margin-right: 2%;
 }
+.reviews{
+    width: 90%;
+    margin: auto;
+}
 .reviewCounter{
     display: block;
     float: right;
