--- a/client/src/pages/alertMessage/AlertMessage.css
+++ b/client/src/pages/alertMessage/AlertMessage.css
@@ -1,3 +1,11 @@
 .alertButton {
 	margin-top: 1rem;
 }
+@media only screen and (max-width: 768px) {
+	.alertButton {
+		margin: 1.5rem 0;
+	}
+	.alertText {
+		font-size: 30px !important;
+	}
+}
